[package]
name = "construct_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3" }
log = "0.4"
log4rs = "1.4"
toml = "0.9"
serde = "1.0"
parquet = { version = "58.0.0", features = ["arrow"] }
arrow = "58.0.0"
iceberg = "0.8.0"
[build-dependencies]
prost-build = { version = "0.14" }